--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -32,7 +32,7 @@
                 </div>
 
                 <div class="register-cs-cell-wrapper">
-                    <small class="cal-day-number register-cs-cell">
+                    <small class="cal-day-number register-cs-cell-total">
                         {{ getBalance(day.date) | currency:'USD':'symbol':'1.2-2' }}
                     </small>
                 </div>
